pre release done